🔥Layout bug fixed in reviews section

--- a/assets/styles.sass
+++ b/assets/styles.sass
@@ -336,7 +336,7 @@ ul, ol,
   align-items: stretch
 
 .review-item
-  margin: .5rem
+  margin: .5rem!important
   width: calc(33.3333% - 1rem)
   @media screen and (max-width: 899px)
     width: calc(50% - 1rem)
